# kollmogren_repository

./: README.md
koll_interface_7_30/: Fsensor.cpp  Fsensor.h  image.qrc  koll.sh  koll_interface_7_30.cpp  koll_interface_7_30.h  koll_interface_7_30.pro  koll_interface_7_30.pro.user.3b74efc  koll_interface_7_30.pro.user.70678c5  koll_interface_7_30.ui  koll_plot.h  koll_queue.cpp  koll_queue.h  koll_tcp.cpp  koll_tcp.h  main.cpp
koll_interface_7_30/data/: tra1.txt  tra1_d.txt  tra2.txt  tra2_d.txt  tra3.txt  tra3_d.txt  tra4.txt  tra4_d.txt
slave/: client.cpp
slave/RGM_controller-master/kollmorgen/: CMakeLists.txt  kollmorgen.c  kollmorgen.h  root@192.168.1.233  send.sh  setup.bash
slave/RGM_controller-master/kollmorgen/canopen/: CMakeLists.txt
slave/RGM_controller-master/kollmorgen/canopen/include/: objdictdef.h  sdo.h
slave/RGM_controller-master/kollmorgen/canopen/mthread/: CMakeLists.txt  koll_dynamics.c  koll_dynamics.h  koll_j1_pos.c  koll_j1_pos.h  koll_operation.c  koll_operation.h  koll_run.c  koll_run.h  koll_tcp.c  koll_tcp.h  (+2 more)
slave/RGM_controller-master/kollmorgen/cmake/: CMakeLists.txt
slave/传送的执行文件/: aa.sh  init.sh  readme  runkoll.sh  其他指令
slave/测试/test1/: CMakeLists.txt  setup.bash  test1.cpp
slave/测试/test2-time/: CMakeLists.txt  build.sh  test  test1.c
slave/测试/test3/: .write2_txt.txt.swp  test  test.txt  test2.c  test3.c  write2.txt
slave/测试/test4-opengl/: 2-joint1.stl  test  test4.cpp  test5.cpp
slave/测试/test5-posix/: CMakeLists.txt  test  test2.c  test3.c  test4.c  test5.c  test6.c  test7.c  test8.c  time2.c
slave/测试/test5-posix/neibucesio1/: CMakeLists.txt  build.sh  test1.c  test5.c
slave/练习/: dd  dd.c  time  time.c  time2  time2.c
slave/练习/picture/: Makefile  chartthemes  moc_themewidget.cpp
slave/练习/测试文件/: mu  mu.c
slave/练习/测试文件/koll_1/: koll.cpp  koll.h  koll.ui  koll_1.pro  koll_1_zh_CN.ts  main.cpp
slave/练习/测试文件/tcp/: a1  a1.c  a2  a2.c  client  client.cpp  phre  phre.cpp  pre  pre1  pre1.cpp  pserver  pserver.cpp  q1  q1.cpp  server  server.cpp
slave/练习/测试文件/tcp-7.26/: myqueue  myqueue.cpp  server  server.cpp
(+17 files in other folders)
